k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: rdicidr
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
